[gd_scene load_steps=15 format=3 uid="uid://bdd54s8wdfdsc"]

[ext_resource type="PackedScene" uid="uid://bnktmhuvbbhqv" path="res://prefabs/upgrade_menu.tscn" id="1_c23vw"]
[ext_resource type="Texture2D" uid="uid://dyho3orymgg41" path="res://icon.svg" id="1_em40g"]
[ext_resource type="PackedScene" uid="uid://d07pxhxu1ug5i" path="res://prefabs/menu.tscn" id="1_u4qe6"]
[ext_resource type="Script" path="res://scripts/MapInfo.gd" id="2_j20rq"]
[ext_resource type="Texture2D" uid="uid://bntdacghcahec" path="res://sprites/mapart.png" id="3_aatww"]
[ext_resource type="Script" path="res://scripts/Keys.gd" id="4_di2xy"]
[ext_resource type="PackedScene" uid="uid://d3x2egwr42wpm" path="res://prefabs/key_entry.tscn" id="4_r7eab"]
[ext_resource type="Texture2D" uid="uid://bsvj6kbku0k16" path="res://wfc_images/levelSample3-spikes.png" id="5_3ptxv"]
[ext_resource type="Theme" uid="uid://0va2tdybcl4b" path="res://themes/main_menu_theme.tres" id="6_goa58"]
[ext_resource type="PackedScene" uid="uid://cywny0yr2evn6" path="res://prefabs/code_menu.tscn" id="6_pee7n"]
[ext_resource type="Script" path="res://scripts/WaveFunctionCollapse.gd" id="8_vwnae"]
[ext_resource type="PackedScene" uid="uid://bf08akeilq3j1" path="res://prefabs/tile_map.tscn" id="9_qh1ky"]
[ext_resource type="AudioStream" uid="uid://dl3u7v333oha2" path="res://music/big_bossanova.wav" id="10_yprvw"]
[ext_resource type="Script" path="res://scripts/MusicPlayer.gd" id="11_hqvrv"]

[node name="Main" type="Node2D"]
texture_filter = 1

[node name="CodeMenu" parent="." instance=ExtResource("6_pee7n")]
visible = false

[node name="UpgradeMenu" parent="." instance=ExtResource("1_c23vw")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="MapInfo" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_j20rq")

[node name="MapSprite" type="TextureRect" parent="CanvasLayer/MapInfo"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_aatww")
expand_mode = 1
stretch_mode = 4

[node name="MapContents" type="TextureRect" parent="CanvasLayer/MapInfo"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[node name="HUD" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 300.0
offset_bottom = 73.0

[node name="TopHUD" type="HBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CoinsIcon" type="TextureRect" parent="CanvasLayer/HUD/TopHUD"]
modulate = Color(0.639216, 0.662745, 0, 1)
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("1_em40g")
expand_mode = 3

[node name="CoinAmount" type="Label" parent="CanvasLayer/HUD/TopHUD"]
layout_mode = 2
theme = ExtResource("6_goa58")
text = ":0"

[node name="Keys" type="VBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme = ExtResource("6_goa58")
script = ExtResource("4_di2xy")

[node name="KeyEntry" parent="CanvasLayer/HUD/Keys" instance=ExtResource("4_r7eab")]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("6_goa58")

[node name="Menu" parent="." instance=ExtResource("1_u4qe6")]
process_mode = 3

[node name="WaveFunctionCollapse" type="WaveFunctionCollapse" parent="."]
output_size = Vector2i(64, 64)
seed = 28
symmetry = 5
pattern_size = 3
visible = false
position = Vector2(12.1313, 0.0576079)
texture = ExtResource("5_3ptxv")
script = ExtResource("8_vwnae")

[node name="TileMap" parent="." instance=ExtResource("9_qh1ky")]
scale = Vector2(4, 4)

[node name="Respawn" type="Node2D" parent="."]
position = Vector2(42, -53)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.25, 0.25)

[node name="Music" type="Node" parent="."]
script = ExtResource("11_hqvrv")

[node name="MusicPlayer1" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("10_yprvw")
volume_db = -5.842

[node name="MusicPlayer2" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("10_yprvw")
volume_db = -5.842
